fix mal rec covers

--- a/src/css/notifications.css
+++ b/src/css/notifications.css
@@ -78,6 +78,8 @@ span.hohMediaImageContainer{
 	background-repeat: no-repeat;
 	object-fit: cover;
 	object-position: center;
+	background-position: 50%;
+	background-size: cover;
 	line-height: 0;
 }
 .hohCommentsContainer{
